backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-service
        image: dhananjayk8sprojectacr.azurecr.io/backend-service:v6
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  type: ClusterIP 
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: backend
